--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -79,6 +79,37 @@ As for the six special abilities :
 
 # My bot
 
+I split my bot into 4 different parts. The first one will take carft of the drafting phase. It is basically an hardcode evluation of every card from the game. The second one is how you choose which card you'll summon. Here, I used a Monte-carlo algorithm (MC), with an evaluation function. The third part needs you to decide which card will atack who.
+
+Again, I combined an MC with a MinMax algorithm. Finally, the last part is the heuristic I used. Every part of my code is using heuristic and pruning to help my code take better decisions, since it is mainly based on chance.
+
+You only have a limited amount of time when you play :
+
+<table>
+  <thead>
+    <tr>
+      <th>Actions</th>
+      <th>Allocated time</th>
+    </tr>
+  </thead>
+  <tfoot>
+    <tr>
+    <td>Response time per turn</td>
+    <td> 100ms </td>
+    </tr>
+  </tfoot>
+  <tbody>
+  <tr>
+    <td>Response time for the first draft turn</td>
+    <td>1000ms</td>
+  </tr>
+    <tr>
+      <td>Response time for the first battle turn</td>
+      <td>1000ms</td>
+    </tr>
+  </tbody>
+</table>
+
 ## Monte Carlo
 
 ## MCTS
