--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -127,3 +127,9 @@ You only have a limited amount of time when you play :
 
 
 # References
+
+# TODO :
+
+* challenge entre plusierus versions
+* mana curve
+* expliquer les eval functions
