--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -13,6 +13,8 @@ title: Legends of Code & Magic - a Codingame contest
   gtag('config', 'UA-145347384-1');
 </script>
 
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+
 # Codingame
 
 Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
@@ -112,6 +114,9 @@ You only have a limited amount of time when you play :
 
 ## Monte Carlo
 
+Test mathajax : $a = b+c$
+
+$$ \nabla \mu = 0 $$ 
 
 ## MCTS
 
@@ -124,7 +129,6 @@ You only have a limited amount of time when you play :
 ### Attacking phase
 
 # Conclusion
-
 
 # References
 
