--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -13,7 +13,11 @@ title: Legends of Code & Magic - a Codingame contest
   gtag('config', 'UA-145347384-1');
 </script>
 
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+<script src="//yihui.name/js/math-code.js"></script>
+<!-- Just one possible MathJax CDN below. You may use others. -->
+<script async
+  src="//mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
 
 # Codingame
 
@@ -114,11 +118,11 @@ You only have a limited amount of time when you play :
 
 ## Monte Carlo
 
-Test mathajax : $a = b+c$
+Test mathajax : `$a = b+c$`
 
-$$ \nabla \mu = 0 $$
+`$$ \nabla \mu = 0 $$`
 
-alors is it working? 
+alors is it working?
 
 ## MCTS
 
