--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -120,7 +120,7 @@ You only have a limited amount of time when you play :
 
 Test mathajax : `$a = b+c$`
 
-`$$ \nabla \mu = 0 $$`
+`$$ \nabla \mu = 0+a $$``
 
 alors is it working?
 
