--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -131,9 +131,9 @@ You only have a limited amount of time when you play :
 
 ## Monte Carlo
 
-Test mathajax : `$a = b+c$`
+Test mathajax : $a = b+c$
 
-`$$ \nabla \mu = 0$$``
+$$ \nabla \mu = 0$$
 
 alors is it working?
 
