--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -132,10 +132,12 @@ You only have a limited amount of time when you play :
 ## Monte Carlo
 
 Intuitively, a Monte-Carlo method means that we will use several random draws in order to approximate the calcul of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them in order to find the best sequence of move possible. On a more mathematical point of view, let $x_1, x_2, ..., x_N$ *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
+
 $$\mathbb{E} (f(X)) = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i) $$
 
 In fact, if we denote  $I = \mathbb{E}(f(X))$ and $I_N = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i)$, we have thanks to the [strong law of large number](https://en.wikipedia.org/wiki/Law_of_large_numbers) :
-$$ I_N \leftrightarrow I a.s.$$
+
+$$ I_N \rightarrow I a.s.$$
 
 
 ## MCTS
