--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -48,7 +48,7 @@ Codingame is a website where you can solve puzzles, work on optimization problem
 
  <center>
  <em>
-<a href="https://www.codingame.com/multiplayer/bot-programming/coders-strike-back">A game inspired from Star Wars</a> wheere you control 2 pods. You can learn a lot about several algorithms: genetic algorithms, MCTS, minmax, etc.
+<a href="https://www.codingame.com/multiplayer/bot-programming/coders-strike-back">A game inspired from Star Wars</a> wheere you control 2 pods. You can learn a lot about several algorithms: genetic algorithms, MCTS, min-max, etc.
   </em>
   </center>
 
@@ -137,11 +137,13 @@ $$\mathbb{E} (f(X)) = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i) $$
 
 In fact, if we denote  $I = \mathbb{E}(f(X))$ and $I_N = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i)$, we have thanks to the [strong law of large number](https://en.wikipedia.org/wiki/Law_of_large_numbers) :
 
-$$ I_N \rightarrow I a.s.$$
+$$ I_N \rightarrow I \; \; a.s.$$
 
-n
+For example, let's say we are playing a game of tic-tac-toe. Every time we have to play, one solution could be to play several random moves, evaluate them (wich one is the most promising?) and play the best. Even more, we could also play several sequence of random moves (*e.g.*: one move for me - one for my opponent - one for me) aand apply the same strategy.
+
 ## MCTS
 
+Now, a Monte-Carlo method has several flaws, but one of them is the fact the moves are drawn randomly. We could spend a lot of time simulating moves that are not interesting at all. Therefore, an idea would be to simulate and evaluate the more promissing moves. This is called a Monte-Carlo Tree Search.
 
 
 ## Draft phase
