--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -36,11 +36,7 @@ MathJax.Hub.Queue(function() {
 
 Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
 
-![quidditch]({{ site.url }}/imgs/2018-09-02-LOCAM/quidditch.png)
-<p align="center">
-  <img src="{{ site.url }}/imgs/2018-09-02-LOCAM/quidditch.png">
-</p>
-
+![quidditch](https://github.com/DonsetPG/DonsetPG.github.io/blob/master/imgs/2018-09-2-LOCAM/quidditch.png)
 <center>
 <em>
 <a href="https://www.codingame.com/multiplayer/bot-programming/fantastic-bits">A quidditch game</a> from Codingame where your AI controls 2 players. This is a great game that includes great AI and physics.
