--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -34,9 +34,9 @@ MathJax.Hub.Queue(function() {
 
 # Codingame
 
-Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personally mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
+Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personalgly mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
 
-![quidditch](https://github.com/DonsetPG/DonsetPG.github.io/blob/master/imgs/2018-09-2-LOCAM/quidditch.png)
+![quidditch]({{ site.url }}/imgs/2018-09-02-LOCAM/quidditch.png)
 <center>
 <em>
 <a href="https://www.codingame.com/multiplayer/bot-programming/fantastic-bits">A quidditch game</a> from Codingame where your AI controls 2 players. This is a great game that includes great AI and physics.
@@ -145,6 +145,40 @@ For example, let's say we are playing a game of tic-tac-toe. Every time we have 
 Now, a Monte-Carlo method has several flaws, but one of them is the fact the moves are drawn randomly. We could spend a lot of time simulating moves that are not interesting at all. Therefore, an idea would be to simulate and evaluate the more promissing moves. This is called a Monte-Carlo Tree Search.
 
 The first idea is to view a game as a tree: each node being one possible state of the game.
+
+<div class="message">
+<p><strong>Trees</strong></p>
+
+<p>A tree is a mathematical/CS object with very strong properties. The best way to see it is to consider how one is built :
+</p>
+
+<ul style="list-style-type:square;">
+  <li>Each tree starts with a particular node: the root</li>
+  <li>Each node has several sons</li>
+  <li>Each nodes (excep the root) has unique father</li>
+</ul>
+
+<p>A tree is a great and understandable way to store informations. A very vast theory also exists around it: how to run trough one, etc.  
+</p>
+</div>
+
+![ttt-mcts]({{ site.url }}/imgs/2018-09-02-LOCAM/ttt-mcts.png)
+
+<center>
+<em>
+An overview of the beginning of a tic-tac-toe game, reproduced from [Medium](https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238).
+</em>
+</center>
+
+An MCTS always follows the same 4 steps:
+
+### Selection
+
+Starting from the root, we select childrens, often following the *UCT* formula (the node maximizing the following):
+
+$$ \frac{w}{n} + c\sqrt{\frac{\ln{N}}{n}}$$
+
+
 
 ## Draft phase
 
