--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -178,7 +178,35 @@ Starting from the root, we select childrens, often following the *UCT* formula (
 
 $$ \frac{w}{n} + c\sqrt{\frac{\ln{N}}{n}}$$
 
+where $w$ is the amount of win from this node, $n$ the amount of time we visited this node, $N$ the amount of time we visited this node's father and $c$ an exploration parameter. This formula is suppose to give a good comprise between exploration and exploitation.
 
+### Expansion
+
+If the selected node isn't terminal, we simulate one child from it.
+
+### Simulation
+
+We simulate a game, starting from this child, until we reach a terminal state.
+
+### Backpropagation
+
+Since we reached a terminal state, we can update every visited nodes with the new information : we lost or we won.
+
+![ttt-mcts-full]({{ site.url }}/imgs/2018-09-02-LOCAM/ttt-mcts.png)
+
+<center>
+<em>
+Explanation of an MCTS -  [Chaslot (2006)](https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238).
+</em>
+</center>
+
+### Evaluation function
+
+An MCTS supposes that it is possible (in a reasonable amount of time) to reach a terminal state. Now, this might not be possible : only partiable obersvations (like in this game, where you can't predict the hand of the opponent), computational time that is too heavy, etc. Therefore, it is interesting to define an evaluation function (like in Evolutianory Algorithm) : the goal of such a function is to characterize how good (or bad) a state of the game is.
+
+<div class="message">
+For example in a game of tic-tac-toe, it could be number of <em> opportunity </em> (square that would make you win if you played here)
+</div>
 
 ## Draft phase
 
