--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -130,7 +130,9 @@ You only have a limited amount of time when you play :
 
 ## Monte Carlo
 
-Intuitively, a Monte-Carlo method means that we will use several random draws in order to approximate the calcul of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them in order to find the best sequence of move possible. On a more mathematical point of view, let $x_1, x_2, ..., x_N$ *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
+Intuitively, a Monte-Carlo method means that we will use several random draws in order to approximate the calcul of something. It could mean: shooting random arrows in a square with a circle in it. The proportion of arrows into the circle will allow us to approximate $\pi$. In a game, we could simulate random moves and evaluate them in order to find the best sequence of move possible.
+
+On a more mathematical point of view, let $x_1, x_2, ..., x_N$ *i.i.d.* laws, following the same law as a random variable $X$. For any borelian fuction $f$ (with $f(X) \in L^1$), we can calculate the following approximation :
 
 $$\mathbb{E} (f(X)) = \frac{1}{N} \displaystyle \sum_{i=1}^{N} f(x_i) $$
 
@@ -155,7 +157,7 @@ The first idea is to view a game as a tree: each node being one possible state o
 <ul style="list-style-type:square;">
   <li>Each tree starts with a particular node: the root</li>
   <li>Each node has several sons</li>
-  <li>Each nodes (excep the root) has unique father</li>
+  <li>Each nodes (except the root) has unique father</li>
 </ul>
 
 <p>A tree is a great and understandable way to store informations. A very vast theory also exists around it: how to run trough one, etc.  
