--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -212,6 +212,21 @@ For example in a game of tic-tac-toe, it could be number of <em> opportunity </e
 
 ## Draft phase
 
+When the contest started, I believed that the draft phase would not be the key part of the contest. As it will turned out, this was a mistake. My first strategy was to follow a mana curve (a sort of gaussian, with a mean at 6 of mana). If this strategy worked fine, this was clearly not the best choice.
+
+After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The idea would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build a genetic algorithms, each individual of the population being a set of score for each cards.
+
+<div class="message">
+To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individuals, and then keep some of the best for the next generation. In order to build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
+
+This is an optimization algorithm I love, and I used it a lot on Codingame.
+</div>
+
+In order to evaluate each individual, I used several methods. All of them are based on the same strategy: playing many games with this draft against another fixed one, and keeping the win rate as the score of the individuals.
+
+In the end, this method gave me a score for each card, score I kept until the end of the contest.
+
+It seemed like a good idea, and it turned out it was. However, some other players went further, with varying scores depending on the deck you already had, and achieved even better results.
 
 ## Playing phase
 
