--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -230,6 +230,71 @@ It seemed like a good idea, and it turned out it was. However, some other player
 
 ## Playing phase
 
+A key point here, since as I said earlier, it is impossible to simulate the game until a terminal state, is an eveluation function.
+
+I used the same one for both the summoning and the attacking phase (you could even unsplit these two parts and evaluate them at the same time). During the contest, I built several functions:
+
+### Evaluation function 1 - Complex
+
+The first I built (and the one I used in the end) is a function that takes the following form :
+
+$$ HP_{me} - HP_{opponent} + \displaystyle \sum_{\forall card \in B_{me}} f(card) - \displaystyle \sum_{\forall card \in B_{opponent}} f(card) $$
+
+where $B_{me}$ ($B_{opponent}$) is my board (the opponent's board), and $f$ is an evaluation function for each card, that takes the following (complex form) :
+
+```java
+public double f(int n,int mineHp,int opponentHp){
+
+  double score = 0;
+  score += 2*(double)this.defense + 5*(double)this.attack;
+
+  if (opponentHp <= this.hpChangeOpponent && n == 0){
+    score += 1000;
+  }
+
+  if (this.guard && mineHp < 20 && n == 0){
+    score += 1.5*(double)this.defense;
+  }
+  if (this.CardDraw > 0 && mineHp < 15 && n == 0){
+    score += 4;
+  }
+  if (this.breaktrough){
+    score += ((double)this.attack - 1.0)*0.9;
+  }
+  if (this.drain){
+    score += 0.7*(double)this.attack;
+  }
+  if (this.lethal){
+    score += 20.0 - (double)this.attack;
+  }
+  if (this.ward){
+    score += (double)this.attack;
+    score += 4;
+  }
+  if (this.ward && this.lethal){
+    score += 20.0 - (double)this.attack;
+  }
+
+  if (mineHp < 10 && this.guard && n == 0){
+    score += 3*(double)this.defense;
+  }
+  if (opponentHp < 10 && this.breaktrough && n == 0){
+    score += (double)this.attack;
+  }
+  if (opponentHp < 10 && this.drain && n == 1){
+    score += (double)this.attack;
+  }
+  return score;  
+}
+```
+
+### Evaluation function 2 - Simple
+However, I also tried (unsucessfully) other evaluation function during the contest. A simpler one was talking the same shape as above, but where $f$ was the score of each card from the drafting phase.
+
+### Evaluation function 3 - Tempo
+
+The last one was based on the tempo of the player. A FINIR
+
 ### Summoning phase
 
 ### Attacking phase
@@ -237,8 +302,3 @@ It seemed like a good idea, and it turned out it was. However, some other player
 # Conclusion
 
 # References
-
-# TODO :
-* challenge entre plusierus versions
-* mana curve
-* expliquer les eval functions
