--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -245,8 +245,7 @@ where $B_{me}$ ($B_{opponent}$) is my board (the opponent's board), and $f$ is a
 ```java
 public double f(int n,int mineHp,int opponentHp){
 
-  double score = 0;
-  score += 2*(double)this.defense + 5*(double)this.attack;
+  double score = 2*(double)this.defense + 5*(double)this.attack;
 
   if (opponentHp <= this.hpChangeOpponent && n == 0){
     score += 1000;
@@ -297,8 +296,19 @@ The last one was based on the tempo of the player. A FINIR
 
 ### Summoning phase
 
+MC with heuristic (guard no die, charge for die)
+
 ### Attacking phase
+
+MCTS
 
 # Conclusion
 
+graph ranking
+
 # References
+
+- mdium mcts
+- codingame
+- codingame LOCAM
+-
