--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -47,7 +47,7 @@ Codingame is a website where you can solve puzzles, work on optimization problem
 
  <center>
  <em>
-<a href="https://www.codingame.com/multiplayer/bot-programming/coders-strike-back">A game inspired from Star Wars</a> wheere you control 2 pods. You can learn a lot about several algorithms: genetic algorithms, MCTS, min-max, etc.
+<a href="https://www.codingame.com/multiplayer/bot-programming/coders-strike-back">A game inspired from Star Wars</a> where you control 2 pods. You can learn a lot about several algorithms: genetic algorithms, MCTS, min-max, etc.
   </em>
   </center>
 
@@ -238,9 +238,9 @@ I used the same one for both the summoning and the attacking phase (you could ev
 
 The first I built (and the one I used in the end) is a function that takes the following form :
 
-$$ HP_{me} - HP_{opponent} + \displaystyle \sum_{\forall card \in B_{me}} f(card) - \displaystyle \sum_{\forall card \in B_{opponent}} f(card) $$
+$$ HP_{me} - HP_{opponent} + \displaystyle \sum_{\forall \; card \in \; B_{me}} f(card) - \displaystyle \sum_{\forall \; card \in \; B_{opponent}} f(card) $$
 
-where $B_{me}$ ($B_{opponent}$) is my board (the opponent's board), and $f$ is an evaluation function for each card, that takes the following (complex form) :
+where $B_{me}$ (respectively $B_{opponent}$) is my board (respectively the opponent's board), and $f$ is an evaluation function for each card, that takes the following (complex form) :
 
 ```java
 public double f(int n,int mineHp,int opponentHp){
