--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -36,7 +36,8 @@ MathJax.Hub.Queue(function() {
 
 Codingame is a website where you can solve puzzles, work on optimization problems, and build bots for games. You have access to a huge range of codding languages, and I personalgly mainly used Java. According to the puzzles you solve, your ranking in the multiplayer games and in the contests, you get a global ranking on the website. I mainly worked on multiplayer pluzzles : creation of bots for several games : a card game, a quidditch match, a tron battle, etc.
 
-![quidditch]({{ site.url }}/imgs/2018-09-02-LOCAM/quidditch.png)
+![quidditch]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/quidditch.png)
+
 <center>
 <em>
 <a href="https://www.codingame.com/multiplayer/bot-programming/fantastic-bits">A quidditch game</a> from Codingame where your AI controls 2 players. This is a great game that includes great AI and physics.
@@ -168,7 +169,8 @@ The first idea is to view a game as a tree: each node being one possible state o
 
 <center>
 <em>
-An overview of the beginning of a tic-tac-toe game, reproduced from [Medium](https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238).
+An overview of the beginning of a tic-tac-toe game, reproduced from
+<a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Medium</a>
 </em>
 </center>
 
@@ -198,7 +200,7 @@ Since we reached a terminal state, we can update every visited nodes with the ne
 
 <center>
 <em>
-Explanation of an MCTS -  [Chaslot (2006)](https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238).
+Explanation of an MCTS, reproduced from <a href="https://medium.com/@quasimik/monte-carlo-tree-search-applied-to-letterpress-34f41c86e238">Chaslot (2006)</a>.
 </em>
 </center>
 
