--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -219,6 +219,8 @@ When the contest started, I believed that the draft phase would not be the key p
 After some talks with other coders from the contest, the idea of hardcoding a score for each card emerged. The idea would then be to draw the card with the higher score. The real question was: how to compute such scores? The strategy I used was to build a genetic algorithms, each individual of the population being a set of score for each cards.
 
 <div class="message">
+<p><strong>Genetic Algorithms</strong></p>
+
 To keep things as simple as possible, a genetic algorithm starts with a population made of a fixed number of individuals. At every generation, you compute the score of each individuals, and then keep some of the best for the next generation. In order to build the rest of this next generation, several options are available: mutations, melting two existing solutions, tournament to keep some of them, etc.
 
 This is an optimization algorithm I love, and I used it a lot on Codingame.
@@ -240,7 +242,7 @@ I used the same one for both the summoning and the attacking phase (you could ev
 
 The first I built (and the one I used in the end) is a function that takes the following form :
 
-$$ HP_{me} - HP_{opponent} + \displaystyle \sum_{\forall \; card \in \; B_{me}} f(card) - \displaystyle \sum_{\forall \; card \in \; B_{opponent}} f(card) $$
+$$ HP_{me} - HP_{opponent} + \displaystyle \sum_{\forall \; card \; \in \; B_{me}} f(card) - \displaystyle \sum_{\forall \; card \; \in \; B_{opponent}} f(card) $$
 
 where $B_{me}$ (respectively $B_{opponent}$) is my board (respectively the opponent's board), and $f$ is an evaluation function for each card, that takes the following (complex form) :
 
@@ -294,13 +296,29 @@ However, I also tried (unsucessfully) other evaluation function during the conte
 
 ### Evaluation function 3 - Tempo
 
-The last one was based on the tempo of the player. A FINIR
+The last one was based on the tempo of the player. Here is a definition from an [Hearthstone Wiki](https://hearthstone.gamepedia.com/Tempo) :
 
-### Summoning phase
+> While tempo is often considered to be a common term and fairly simple to understand, it is also often considered to be among the more difficult things in Hearthstone to describe by definition rather than by examples or through a practice run. Many suggestions have been made for verbally describing this use of tempo, some of which are below:
+* The momentum of the match. Probably the original definition and among many unofficially accepted "right" ones. However, its imprecision can lead to misunderstandings and odd interpretations causing confusion in discussion.
+* The change of the board state in a given time (usually either a play or a turn, as in "a good/bad tempo play/turn"). What this definition has in its favor is its simplicity, but this very simplicity means that it does not cover all the uses of this term.
+* The speed at which a player is reaching his/her win condition. An alternate interpretation of the original definition that is especially useful when discussing decks that don't mainly win by gaining board control or that don't aim at reaching that goal at the start of the game.
+* The value of the effect on the board state divided by the mana used. The main upside of this definition is its being in the form of a mathematical formula, because in the future it could be applied to calculations.
+
+I tried to evaluate both my and the opponent's tempo, but this wasn't successeful either. This evaluation was using both player's HP, the defense of the cards they had on their board, and the mana both player had.
+
+## Summoning phase
 
 MC with heuristic (guard no die, charge for die)
 
-### Attacking phase
+![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-summoning-1.png)
+
+<center>
+<em>
+Representation of the process going on for the summoning phase.
+</em>
+</center>
+
+## Attacking phase
 
 MCTS
 
