--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -308,7 +308,11 @@ I tried to evaluate both my and the opponent's tempo, but this wasn't successefu
 
 ## Summoning phase
 
-MC with heuristic (guard no die, charge for die)
+The summoning phase was kept as simple as possible, in order to waste as little time as possible.
+
+First, I would check if I had to summon some cards. For example, a Guard card could save me if I was about to die, or a Charge card could finish the opponent immediatly. Therefore, I would always check first if certain situations occured, and apply them immediatly.
+
+Once this was done, I would generate a random sequence of possible cards to summon, simulate it and evaluate the board. If the score was better than the current best, I would kept it.
 
 ![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-summoning-1.png)
 
@@ -318,10 +322,14 @@ Representation of the process going on for the summoning phase.
 </em>
 </center>
 
-
 ## Attacking phase
 
-MCTS
+![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-attacking-1.png)
+<center>
+<em>
+View of the tree I built during the attacking phase.
+</em>
+</center>
 
 # Conclusion
 
