--- a/blog/_posts/2018-09-2-LOCAM.md
+++ b/blog/_posts/2018-09-2-LOCAM.md
@@ -333,10 +333,14 @@ View of the tree I built during the attacking phase.
 
 # Conclusion
 
-graph ranking
+![ttt-mcts-full]({{ site.url }}/imgs/2019-08-06-DRL-FM-review/LOCAM-ranking.png)
+<center>
+<em>
+My ranking (out of 2,200) some time in the contest. 
+</em>
+</center>
 
 # References
-
 - mdium mcts
 - codingame
 - codingame LOCAM
